Head now has a title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-    <title>
-        <h1>Turtles</h1>
-    </title>
+    <head>
+        <title>
+            Turtles
+        </title>
+    </head>
 
     <body>
         I like turtles
